--- a/src/app/shared/layouts/basic-layout/basic-layout.component.html
+++ b/src/app/shared/layouts/basic-layout/basic-layout.component.html
@@ -1,4 +1,6 @@
-<header></header>
+<header class="fixed w-full top-0 left-0 right-0 z-50">
+  <app-header></app-header>
+</header>
 <main>
   <ng-content></ng-content>
 </main>
