feat: добавлено отображние карточек фильмов

--- a/src/app/shared/layouts/basic-layout/basic-layout.component.html
+++ b/src/app/shared/layouts/basic-layout/basic-layout.component.html
@@ -1,7 +1,7 @@
-<header class="fixed w-full top-0 left-0 right-0 z-50">
+<header class="max-w-[1200px] mx-auto">
   <app-header></app-header>
 </header>
-<main>
+<main class="max-w-[1200px] mx-auto w-full p-4">
   <ng-content></ng-content>
 </main>
-<footer></footer>
+<footer class="max-w-[1200px] mx-auto"></footer>
