chore: исправдены наименования файлов и классов

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -9,7 +9,7 @@
     class="header__controls flex gap-2 items-center justify-end w-full max-sm:justify-start"
   >
     <div class="header__search relative w-full">
-      <app-film-search></app-film-search>
+      <app-movie-search></app-movie-search>
     </div>
 
     <div class="header__buttons flex gap-4">
