--- a/src/app/movies/movie-list/movies-list.component.html
+++ b/src/app/movies/movie-list/movies-list.component.html
@@ -1,11 +1,12 @@
-<div class="movie-list grid md:grid-cols-3 sm:grid-cols-1 gap-4 items-stretch">
+<div class="movie-list grid md:grid-cols-3 sm:grid-cols-2 gap-4 items-stretch">
   @for (movie of movieService.moviesList(); track $index) {
     <app-movie-preview-card [movie]="movie"></app-movie-preview-card>
   }
-
-  <div #anchor class="h-4"></div>
 </div>
 
 @if (movieService.isLoading()) {
   <z-loader></z-loader>
+}
+@if (!movieService.isLoading() && movieService.moviesList().length == 0) {
+  <h2 class="text-center text-gray-400">Здесь пока пусто</h2>
 }
