--- a/src/app/movies/movie-search/movie-search.component.html
+++ b/src/app/movies/movie-search/movie-search.component.html
@@ -1,1 +1,6 @@
-<input z-input type="text" placeholder="Поиск фильмов..." />
+<input
+  (input)="onInput($event.target.value)"
+  z-input
+  type="text"
+  placeholder="Поиск фильмов..."
+/>
